# env-induced-deformation

./: .gitignore  CMakeLists.txt  README.md  justfile
.cache/clangd/index/: AlignedBox.h.08752D8D36FD627F.idx  AmbiVector.h.38EFB146B8285CF4.idx  Amd.h.1824AAA3AE035BE5.idx  AngleAxis.h.7FF1E849A797F505.idx  ArithmeticSequence.h.783072F850DFDB92.idx  Array.h.1148A8EC355E8C57.idx  ArrayBase.h.B1641F136A0CED11.idx  ArrayCwiseBinaryOps.h.0ED0373D885A9469.idx  ArrayCwiseUnaryOps.h.556C87BB5C5B1198.idx  ArrayWrapper.h.21ED2B294F814256.idx  Assign.h.5C9BB8B589DFA929.idx  AssignEvaluator.h.6B654E373F29C020.idx  AssignmentFunctors.h.7AF3F326B8982BA0.idx  BDCSVD.h.D322A6E98F2DC689.idx  BFloat16.h.4BD470982E462A21.idx  BandMatrix.h.8F21652D6506E31D.idx  BasicPreconditioners.h.0C934103610C6DF5.idx  BiCGSTAB.h.107BAFA0567E5CE0.idx  BinaryFunctors.h.7FEE1C27F3DF7ACA.idx  BlasUtil.h.22E1CAC25E4CFA3F.idx  Block.h.5DF5C9A53F12F9DA.idx  BlockHouseholder.h.AC8533D90BD94B7F.idx  BlockMethods.h.B9122F44C6A78D18.idx  BooleanRedux.h.B18D7E9A69DCCD49.idx  Cholesky.DBBDA756E934DCC5.idx  CholmodSupport.DF2F2CAB20E0FF31.idx  CholmodSupport.h.C41588BD9F4F460B.idx  ColPivHouseholderQR.h.8BFA6D17E81C4F1F.idx  CommaInitializer.h.E25BAC88A037B3AF.idx  CommonCwiseBinaryOps.h.75C859FEB8C41053.idx  CommonCwiseUnaryOps.h.F4AF9FA803EC67B5.idx  CompleteOrthogonalDecomposition.h.53D80F14BAD9F702.idx  Complex.h.01C9033B41F214AD.idx  ComplexEigenSolver.h.0D661A5D7053759A.idx  ComplexSchur.h.563278BF36B398C1.idx  CompressedStorage.h.2BC5F347F6119204.idx  ConditionEstimator.h.B1D2EAD395C688F1.idx  ConfigureVectorization.h.0A0E1C180F87D389.idx  ConjHelper.h.9CC746D15E9FC5FD.idx  ConjugateGradient.h.D919AF0634830D7B.idx  (+244 more)
configs/: armadillo.ini  bunny.ini  cube.ini  demo_square.ini  disk_to_sphere.ini  rectangle.ini  sphere.ini  tetrahedron.ini
ex-configs/: armadillo_swelling.ini  bunny_swelling.ini  circle_swelling.ini  cow_swelling.ini  cylinder.ini  isotropic_growth.ini  rectangle_swelling.ini  shrinking_armadillo.ini  sphere_bending.ini  sphere_stretching.ini  sphere_swelling.ini  sphere_target.ini
resources/shaders/: shader.frag  shader.vert  skybox.frag  skybox.vert
scripts/: gen_flat_disk.py  gen_flat_rect.py  gen_flat_square.py  gen_sphere.py  gen_stereo_disk.py  gen_uniform_disk.py  scale_obj.py
src/: demo.cpp  demo.h  diffusion.cpp  diffusion.h  display_mode.h  embedding.cpp  embedding.h  energy.cpp  energy.h  geometry.cpp  geometry.h  glwidget.cpp  glwidget.h  implicit_euler.cpp  implicit_euler.h  main.cpp  mainwindow.cpp  mainwindow.h  rest_metric.cpp  rest_metric.h  shell_energy.cpp  shell_energy.h  shell_mesh.cpp  shell_mesh.h  simulation.cpp  simulation.h
src/graphics/: meshloader.cpp  meshloader.h  shape.cpp  shape.h
src/simplify/: mesh.cpp  mesh.h  simplify_mesh.cpp  simplify_mesh.h
src/simplify/halfedge/: halfedge.cpp  halfedge.h  helpers.cpp  loop.cpp  operations.cpp  quadric.cpp  remesh.cpp  validation.cpp
